# hybridmc

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  async_avg_s_bias.py  err  hybridmc.yaml  setup.py
.conda_recipe/: build.sh  meta.yaml
.github/workflows/: build.yml  conda_publish_linux.yml  format.yml
ML_models/: 9bond_data.csv  crambin_data.csv  crambin_dataset.json  info  make_dataset_mlp.py  mlp_v0.py  mlp_v1.py  scratch.py  torchlight_mlp.py
crambin_s_bias_mfpt/: mfpt.csv  s_bias.csv
dataset_creation/: collect_data.py  gendata_all.py  generate_training_input.py  guide.txt  make_avg_diff.py  make_dataset.py  run.py
examples/: 50bead_9bond.json  50bead_9bond.sh  8bead_1bond.json  comparison.txt  config_143.json  crambin.json  crambin.sh  problem.json  runtime_test.json  simple_stair.json  simple_stair_0.json  simple_stair_1.json  test.json  test.sh  test2.json  test_4bond.json  test_new_looping.json  test_simple.json  test_st.json  test_st_2.json  test_st_3.json  test_st_3_DynamicSteps.json  test_st_3_newloop.json  test_st_lessstair.json  test_st_more_stairs.json  test_st_morestair.json  test_st_normal.json  time_test.json  training_template.json
examples/test/: diff_s_bias.csv  hybridmc_0_000_001.h5  hybridmc_0_000_001.json  hybridmc_0_000_010.h5  hybridmc_0_000_010.json  hybridmc_0_000_100.h5  hybridmc_0_000_100.json  hybridmc_1_001_011.h5  hybridmc_1_001_011.json  hybridmc_1_001_101.h5  hybridmc_1_001_101.json  hybridmc_1_010_011.h5  hybridmc_1_010_011.json  hybridmc_1_010_110.h5  hybridmc_1_010_110.json  hybridmc_1_100_101.h5  hybridmc_1_100_101.json  hybridmc_1_100_110.h5  hybridmc_1_100_110.json  hybridmc_2_011_111.h5  hybridmc_2_011_111.json  hybridmc_2_101_111.h5  hybridmc_2_101_111.json  hybridmc_2_110_111.h5  hybridmc_2_110_111.json
examples/test.save_2/: diff_s_bias.csv
examples/test.valid/: avg_s_bias.csv  diff_s_bias.csv  hybridmc_0_000_001.csv  hybridmc_0_000_001.h5  hybridmc_0_000_001.json  hybridmc_0_000_010.csv  hybridmc_0_000_010.h5  hybridmc_0_000_010.json  hybridmc_0_000_100.csv  hybridmc_0_000_100.h5  hybridmc_0_000_100.json  hybridmc_1_001_011.csv  hybridmc_1_001_011.h5  hybridmc_1_001_011.json  hybridmc_1_001_101.csv  hybridmc_1_001_101.h5  hybridmc_1_001_101.json  hybridmc_1_010_011.csv  hybridmc_1_010_011.h5  hybridmc_1_010_011.json  hybridmc_1_010_110.csv  hybridmc_1_010_110.h5  hybridmc_1_010_110.json  hybridmc_1_100_101.csv  hybridmc_1_100_101.h5  hybridmc_1_100_101.json  hybridmc_1_100_110.csv  hybridmc_1_100_110.h5  hybridmc_1_100_110.json  hybridmc_2_011_111.csv  hybridmc_2_011_111.h5  hybridmc_2_011_111.json  hybridmc_2_101_111.csv  hybridmc_2_101_111.h5  hybridmc_2_101_111.json  hybridmc_2_110_111.csv  hybridmc_2_110_111.h5  hybridmc_2_110_111.json  mfpt.csv
examples/test2/: diff_s_bias.csv  hybridmc_0_000_001.h5  hybridmc_0_000_001.json  hybridmc_0_000_010.h5  hybridmc_0_000_010.json  hybridmc_0_000_100.h5  hybridmc_0_000_100.json  hybridmc_1_001_011.h5  hybridmc_1_001_011.json  hybridmc_1_001_101.h5  hybridmc_1_001_101.json  hybridmc_1_010_011.h5  hybridmc_1_010_011.json  hybridmc_1_010_110.h5  hybridmc_1_010_110.json  hybridmc_1_100_101.h5  hybridmc_1_100_101.json  hybridmc_1_100_110.h5  hybridmc_1_100_110.json  hybridmc_2_011_111.h5  hybridmc_2_011_111.json  hybridmc_2_101_111.h5  hybridmc_2_101_111.json  hybridmc_2_110_111.h5  hybridmc_2_110_111.json
examples/test_4bond/: diff_s_bias_with_error_old.csv
examples/test_auto_stairs_v2_with_event_queue_cutoff/: diff_s_bias.csv
examples/test_st/: avg_s_bias.csv  diff_s_bias.csv  hybridmc_0_00_01.csv  hybridmc_0_00_01.h5  hybridmc_0_00_01.json  hybridmc_0_00_10.csv  hybridmc_0_00_10.h5  hybridmc_0_00_10.json  hybridmc_0_00_10_2.32.csv  hybridmc_0_00_10_2.32.h5  hybridmc_0_00_10_2.32.json  hybridmc_0_00_10_3.33.csv  hybridmc_0_00_10_3.33.h5  hybridmc_0_00_10_3.33.json  hybridmc_1_01_11.csv  hybridmc_1_01_11.h5  hybridmc_1_01_11.json  hybridmc_1_01_11_2.51.csv  hybridmc_1_01_11_2.51.h5  hybridmc_1_01_11_2.51.json  hybridmc_1_01_11_3.32.csv  hybridmc_1_01_11_3.32.h5  hybridmc_1_01_11_3.32.json  hybridmc_1_10_11.csv  hybridmc_1_10_11.h5  hybridmc_1_10_11.json  mfpt.csv  mfpt_old.csv
examples/test_st_save/: avg_s_bias.csv  diff_s_bias.csv
examples/test_st_save_3/: diff_s_bias.csv
hybridmc/examples/: problem.json  test_3bond.json  test_no_ensemble.json
hybridmc/py_bin/: hmc_averageTransition.py  hmc_run.py  hmc_runTransition.py  hmc_test_avg_s.py  hmc_time_test_run.py  run.py  runTransition.py  run_mfpt.py  test_post_process.py
hybridmc/src/: config.cc  config.h  crankshaft.cc  entropy.h  molecule.h  (+5 more)
py_bin/: run.py  runTransition.py  run_bulk.py  run_mfpt.py  smooth_pdf.py  test_avg_s.py  test_post_process.py  time_test_run.py
release/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  hybridmc  rules.ninja
src/: CMakeLists.txt  box.h  cells.h  config.cc  config.h  crankshaft.cc  crankshaft.h  entropy.cc  event.h  hardspheres.cc  hardspheres.h  hybridmc_test.cc  main.cc  main_helpers.cc  main_helpers.h  molecule.cc  params.h  snapshot.cc  snapshot.h  system.h  wang_landau.cc  writer.h
tools/: Makefile  averageTransition.py  avg_s_bias.py  diff_s_bias.py  diff_s_bias_stair.py  get_error_s_bias.py  get_rerun_files.py  init_json.py  mfpt.py  mfpt_for_stair.py  min_e.py  print_mfpt_to_file.py  run.py  runTransition.py  run_bulk.py  run_mfpt.py  sbias_bootstrap.py  scratch_1.py  smooth_pdf.py  test_avg_s.py  test_post_process.py  time_test_run.py
tree/: 50bead_9bond_min_e.sh  constructPmatrix.cc  crambin_fixed_e.sh
(+413 files in other folders)
